--- a/project/public/assets/dest/css/style.css
+++ b/project/public/assets/dest/css/style.css
@@ -1069,7 +1069,9 @@ sub {
 }
 
 .color-gray {
-    color: orangered
+    color: red;
+    font-weight: bold;
+    font-size: medium;
 }
 
 .color-black {
