--- a/project/public/assets/dest/css/style.css
+++ b/project/public/assets/dest/css/style.css
@@ -60,8 +60,7 @@ html {
 html,
 body {
     height: 100%;
-    -webkit-font-smoothing: antialiased;
-    
+    -webkit-font-smoothing: antialiased;    
 }
 
 body {
@@ -6089,4 +6088,23 @@ li.box-port-filter {
 a.home:hover {
     color: red;
     text-decoration: none;
+}
+
+#inform{
+  background-color: #3cb371;
+  margin: auto;
+  text-align: center;
+  width: 400px;
+  height: 150px;  
+  border-radius: 20px;
+}
+#inform h6, #inform a{
+  color: white;
+  padding-top: 30px;
+}
+#inform h6{
+  
+}
+#inform a{
+  font-size: medium;
 }
