--- a/project/public/assets/dest/css/style.css
+++ b/project/public/assets/dest/css/style.css
@@ -6112,16 +6112,36 @@ a.home:hover {
 .filter {
     display: inline;
 }
-
 .filter a {
     font-size: medium;
     color: #288ad6;
     padding-right: 10px;
 }
-
 .filter p {
     text-align: center;
     font-size: medium;
     font-weight: bold;
     color: red;
+}
+
+.comment input, .comment textarea{
+  border: 1px solid ;
+  border-radius: 5px;
+  margin: 10px 0;
+}
+.comment textarea{
+  height: 100px;
+}
+.comment ul{
+  list-style-type: none;
+}
+.comment span{
+  float: right;
+}
+.comment img{
+  float: left;
+  margin-right: 10px;
+}
+.comment p{
+  margin-top: 20px;
 }
