--- a/project/public/assets/dest/css/style.css
+++ b/project/public/assets/dest/css/style.css
@@ -6181,9 +6181,10 @@ td#comment-reply {
     vertical-align: bottom;
 }
 
-#comment-reply a{
-  font-weight: bold;
-  color: #000;
+#comment-reply span {
+    font-weight: bold;
+    color: black;
+    cursor: pointer;
 }
 
 .see-more a {
