--- a/project/public/assets/dest/css/style.css
+++ b/project/public/assets/dest/css/style.css
@@ -6134,64 +6134,8 @@ a.home:hover {
     margin: 10px 0;
 }
 
-.comment textarea {
+.comment textarea, .reply-form textarea {
     height: 100px;
-}
-
-.comment ul {
-    list-style-type: none;
-}
-
-.comment span {
-    float: right;
-}
-
-.comment img {
-    float: left;
-    margin-right: 10px;
-}
-
-.comment p {
-    margin-top: 20px;
-}
-
-/* .comment table tr td{
-  border: 1px solid;
-} */
-.comment table {
-    width: 100%;
-    table-layout: fixed;
-    border-collapse: collapse;
-    
-}
-
-.comment tr#space {
-    border-top: 40px solid transparent;
-}
-
-td#comment-content {
-    word-wrap: break-word;
-    width: 85%;
-    padding-bottom: 10px;
-}
-
-td#datetime {
-    width: 15%;
-}
-
-td#comment-reply {
-    text-align: end;
-    vertical-align: bottom;
-}
-
-#comment-reply span {
-    font-weight: bold;
-    color: black;
-    cursor: pointer;
-}
-
-.reply-comment{
-  padding-left: 50px;
 }
 
 .see-more a {
