--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -123,7 +123,7 @@ ul#sidebar-menu * {
 #sidebar-menu .sub-menu li a {
     display: block;
     padding: 5px 0px;
-    color: slategrey;
+    color: white;
 }
 
 #page-body {
